# chckrs

server/: Cargo.toml
server/src/: checkers.rs  game.rs  main.rs
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.tsx  Game.tsx  env.d.ts
