[package]
name = "checkers-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.21.0", features = ["macros", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.9"
warp = "0.3"
nanoid = "0.4.0"